Docs: Add section on how to avoid mentor burn out.
The contribution period is super stressful for mentors. They're often
overwhelmed. Add a section on tips to avoid burn out. Note the pros and
cons of each strategy. Note where bias, societal roles, and different
cultures may have unintended consequences on applicant behavior when
putting these strategies into effect.

--- a/home/templates/home/docs/community_guide.html
+++ b/home/templates/home/docs/community_guide.html
@@ -59,6 +59,16 @@ Community Guide | Outreachy Documentation
 	</li>
 	<li><a href="#community-sign-up-process">Community sign up process</a></li>
 	<li><a href="#mentor-sign-up-process">Mentor sign up process</a></li>
+	<li><a href="#avoiding-mentor-burnout-during-contribution-period">Avoiding mentor burnout during the contribution period</a>
+		<ul>
+			<li><a href="#set-office-hours">Set office hours</a></li>
+			<li><a href="#find-volunteers">Find unofficial volunteers</a></li>
+			<li><a href="#limit-simple-contributions">Limit simple contributions</a></li>
+			<li><a href="#similar-applicant-tasks">Have applicants complete similar tasks</a></li>
+			<li><a href="#encourage-collaboration">Encourage collaboration vs competition</a></li>
+			<li><a href="#discourage-new-applicants">Close your project to new applicants</a></li>
+		</ul>
+	</li>
 	<li><a href="#estimated-number-of-interns">Estimated number of interns</a></li>
 	<li><a href="#Internship">Internship</a></li>
 	<li><a href="#faq">FAQ</a>
@@ -385,7 +395,72 @@ Mentors will be granted read access to applications for their project and will b
 <p><a href='#toc'><u>↑ table of contents</u></a></p>
 <hr>
 
-<h2 id='estimated-number-of-interns'><a href="#estimated-number-of-interns">8. Estimated number of interns</a></h2>
+<h2 id='avoiding-mentor-burnout-during-contribution-period'><a href="#avoiding-mentor-burnout-during-contribution-period">8. Avoiding mentor burnout during the contribution period</a></h2>
+
+<p>The contribution period is often very busy and stressful for mentors. They will have around 10-15 applicants asking questions and working on tasks. It's often hard to keep track of who is working on what. You may be overwhelmed by the number of emails, chat notifications, or repository issue notifications.</p>
+
+<p>Communities that have participated in Outreachy in the past have some guidance to share on how to lower stress for mentors:</p>
+
+<h3 id='set-office-hours'><a href="#set-office-hours">8.1 Set office hours</a></h3>
+
+<p>Outreachy is open to anyone around the world. Unfortunately, that means you can get questions and contributions at any time of the day (or night!). It's important that mentors protect their personal time to unwind and do self-care. In your project description, mention what times you are best available to answer questions. Try to set aside at least one hour per week day to answer questions.</p>
+
+<p>The downside to this is that some applicants will not be able to get their questions answered during their normal working hours. You may find that some applicants even shift their work or sleep schedule to be available during your office hours. This can be added emotional labor for parents with children, or people who are currently working and trying to switch careers into tech.</p>
+
+<p>On the other hand, you will need to set up regular check-in times with your intern. So being up front about when you are available to help will narrow the applicants down to ones that have a window to work with you. Some mentors have been able to make working with an applicant with a 12 hour timezone difference, and some mentors have struggled. You know yourself and your work habits. Make the best call for you, while still being open to working with Outreachy interns in many different timezones and countries.</p>
+
+<h3 id='find-volunteers'><a href="#find-volunteers">8.2 Find unofficial volunteers</a></h3>
+
+<p>You can ask experienced contributors to your community to be "unofficial" volunteers. These volunteers could be past Outreachy or Google Summer of Code interns with your community, or other community members. They don't have to be official mentors, but they can help answer questions.</p>
+
+<p>Unofficial volunteers can help people set up contribution environment and tools. They can help with common contribution tools, like git or other revision control software. Unofficial volunteers can also provide experience with community norms. Community norms could be something technical like what coding style to use. Community norms can also involve communication style, like how to effectively ask for help.</p>
+
+<p>Unofficial volunteers can also serve as a connector to other community members or external open source contributors. They can help introduce applicants to people who works on specific parts of the project, or external open source contributors who are experts with a particular tool (like git).</p>
+
+<h3 id='limit-simple-contributions'><a href="#limit-simple-contributions">8.3 Limit simple contributions</a></h3>
+
+<p>A simpler contribution could be something like fixing a spelling error in the documentation. A more complex contribution could be something like refactoring code, writing a documentation section, or doing research. Applicants have a tendency to make a lot of simpler contributions. They may feel confident making smaller changes, but less confident tackling medium complexity tasks.</p>
+
+<p>You can limit the number of simpler contributions that each applicant can complete. Keep track of how many simple contributions applicants have claimed to work on. If an applicant has worked on or wants to claim a third or fourth simple contribution, encourage them to pick up a medium sized or more complex task.</p>
+
+<p>Some communities have queues of simple, medium complexity, and highly complex tasks. Once an applicant completes 1-3 simple tasks, you can point them to the medium complexity task queue.</p>
+
+<h3 id='similar-applicant-tasks'><a href="#similar-applicant-tasks">8.4 Have applicants complete similar tasks</a></h3>
+
+<p>You can ask all applicants complete the same tasks. This task could be something like taking a screen shot showing which shows they got the contribution environment working and made a change to your project. They could also work on a document, like a review of the usability of your project or a design document for a feature they would be working on during the project.</p>
+
+<p>The upside of having applicants work on the same tasks is they can all commenting on the same GitHub issue, which allows you to keep the conversation in one place.</p>
+
+<p>The downside of having applicants work on the same tasks is that some people might be intimidated by the other applicants' work. It may also encourage applicants to copy other applicants' work. If you ask applicants to complete the same task, be sure to have some other individualized tasks that test the applicants' skills.</p>
+
+<h3 id='encourage-collaboration'><a href="#encourage-collaboration">8.4 Encourage collaboration vs competition</a></h3>
+
+<p>Open source is about collaborating with others in a community. It's important to encourage that collaborative mindset in your applicants. Otherwise they may be focused on a more competitive mindset, focusing only on how they can improve their changes of being accepted as an intern.</p>
+
+<p>You can encourage applicants to help each other. Encourage them to engage with applicants or newcomers to the community who ask questions. Keep a shared document of common questions and answers that any applicant can add to. Once an applicant has completed a medium complexity task, encourage them to start reviewing other applicants' contributions.</p>
+
+<p>The upside of encouraging applicants to collaborate is you may lessen the workload for mentors.</p>
+
+<p>There are several downsides, however. One is that applicants with impostor syndrome may feel shy about sharing answers to questions, even if they know the correct answer. Second, some interns may live in countries where they are taught to defer to teachers or people in authority. Answering a question that is directed at experienced developers may seem taboo or breaking a cultural norm.</p>
+
+<p>Additionally, gender bias may come into play when you're looking for interns that collaborate with each other. Women and non-binary people who were assigned female at birth (AFAB) are often socially conditioned to not speak up unless they are extremely confident in their answer. You may find that men and non-binary people who were raised with masculine cultural norms are more likely to speak up and answer questions. Gender bias and gendered social norms should be considered when making intern selections.</p>
+
+<h3 id='discourage-new-applicants'><a href="#discourage-new-applicants">8.5 Close your project to new applicants</a></h3>
+
+<p>Often times, Outreachy applicants will wait until the last week or two of the contribution period to start making contributions. Sometimes this results in them finding a project that has few applicants. Sometimes this means they try to make contributions to a project where many people have already made a contribution. It's important to encourage applicants who are seeking a project to contribute to projects with few applicants.</p>
+
+<p>If you're overwhelmed with applicants who are already finished with contributions, you can close your project to new applicants. This simply moves your project listing on the projects page to a section called "Closed to new applicants". Current applicants will still be able to record contributions and submit a final application.</p>
+
+<p>You can close your project to new applicants by finding that button on <a href="{% url 'dashboard' %}">your dashboard</a>.</p>
+
+<p>It's a difficult decision as to when to close your project to new applicants. You may have many applicants who have completed a simple task, but you're not sure if any of them have the skills to succeed in the internship yet. You may want to wait to close your project to new applicants until at least one or two applicants have completed a medium-complexity task.</p>
+
+<p>Don't wait too long to close your project to new applicants! Waiting too long means that applicants will apply to a project they have no chance of being accepted for.</p>
+
+<p><a href='#toc'><u>↑ table of contents</u></a></p>
+<hr>
+
+<h2 id='estimated-number-of-interns'><a href="#estimated-number-of-interns">9. Estimated number of interns</a></h2>
 
 <p>
 On the <a href="{% url 'project-selection' %}">project list</a>, each community has an estimate of the number of interns it expects to accept.
@@ -437,14 +512,14 @@ Some times project mentors <a href="#contribution-evaluation">evaluated the cont
 <p><a href='#toc'><u>↑ table of contents</u></a></p>
 <hr>
 
-<h2 id='internship'><a href='#internship'>9. Internship</a></h2>
+<h2 id='internship'><a href='#internship'>10. Internship</a></h2>
 
 <p>Mentors and coordinators are encouraged to read the <a href='{% url 'docs-internship' %}'>Internship Guide</a>. The Internship Guide includes mentor duties and expectations during the internship. Mentors should familiarize themselves with the internship chat and blogging schedules.</p>
 
 <p><a href='#toc'><u>↑ table of contents</u></a></p>
 <hr>
 
-<h2 id='faq'><a href='#faq'>10. FAQ</a></h2>
+<h2 id='faq'><a href='#faq'>11. FAQ</a></h2>
 
 <h2 id='stipend-details'><a href='#stipend-details'>Internship stipend details</a></h2>
 
