Fix broken link on community mentor sign up page
Fix broken URLs that reference https://www.outreachy.org/mentor/ and its
various sub-pages.

URLs that reference the base site URL should start with a "/". Otherwise
they will be interpreted as having their base URL be the current page
URL.

For example, in this HTML snippet:

<p>Please make sure you understand the <a href="mentor/#mentor">mentor requirements</a>, especially the time commitment requirement.</p>

If you're currently at the URL https://www.outreachy.org/communities/cfp/mozilla/
then the browser will append the remainder of the URL to the end of the
current page's URL. The browser will then interpret the link as:

https://www.outreachy.org/communities/cfp/mozilla/mentor/#mentor

The fix is to add a '/' at the front of the URL, so the snippet becomes:

<p>Please make sure you understand the <a href="/mentor/#mentor">mentor requirements</a>, especially the time commitment requirement.</p>

Then the browser will then interpret the link as:

https://www.outreachy.org/mozilla/mentor/#mentor

Fixes #463
Fixes #330

--- a/home/templates/home/community_read_only.html
+++ b/home/templates/home/community_read_only.html
@@ -137,7 +137,7 @@ This page is for potential mentors and coordinators only. If you are an Outreach
 
 		<p>Please read the additional <a href="/mentor/mentor-faq/#define-a-project">Outreachy project requirements</a> before submitting an intern project proposal.</p>
 
-		<p>Please make sure you understand the <a href="mentor/#mentor">mentor requirements</a>, especially the time commitment requirement.</p>
+		<p>Please make sure you understand the <a href="/mentor/#mentor">mentor requirements</a>, especially the time commitment requirement.</p>
 
 		<p><strong>Outreachy applicants should not submit project proposals through this form.</strong> You need to look over the <a href="{% url 'project-selection' %}">list of projects</a> and pick a project from that list.</p>
 
@@ -185,7 +185,7 @@ This page is for potential mentors and coordinators only. If you are an Outreach
 	{% if approved_projects %}
 		<h2>Co-mentor an Intern</h2>
 		<p>You can sign up to co-mentor an Outreachy intern.
-		Co-mentors should understand the <a href="mentor/#mentor">mentor requirements</a>, especially the time commitment requirement.
+		Co-mentors should understand the <a href="/mentor/#mentor">mentor requirements</a>, especially the time commitment requirement.
 		</p>
 		<p>Only projects have been approved by the community coordinator for participation in this Outreachy round are open to co-mentor sign-up.
 		</p>
