--- a/home/templates/home/docs/community_guide.html
+++ b/home/templates/home/docs/community_guide.html
@@ -70,7 +70,11 @@ Community Guide | Outreachy Documentation
 		</ul>
 	</li>
 	<li><a href="#estimated-number-of-interns">Estimated number of interns</a></li>
-	<li><a href="#Internship">Internship</a></li>
+	<li><a href="#Internship">Internship</a>
+		<ul>
+			<li><a href='#week-1-expectations'>Week 1 and 2: Expectations for mentors</a></li>
+		</ul>
+	</li>
 	<li><a href="#faq">FAQ</a>
 		<ul>
 			<li><a href='#stipend-details'>Internship stipend details</a></li>
@@ -515,6 +519,46 @@ Some times project mentors <a href="#contribution-evaluation">evaluated the cont
 <h2 id='internship'><a href='#internship'>10. Internship</a></h2>
 
 <p>Mentors and coordinators are encouraged to read the <a href='{% url 'docs-internship' %}'>Internship Guide</a>. The Internship Guide includes mentor duties and expectations during the internship. Mentors should familiarize themselves with the internship chat and blogging schedules.</p>
+
+<h3 id='week-1-expectations'><a href='#week-1-expectations'>Week 1 and 2: Expectations for mentors</a></h3>
+
+<p>Outreachy organizers have the following expectations for mentors during week 1 and 2 of the internship:
+<ol>
+	<li>
+		<p><b>Clearing up doubts.</b></p>
+		<p>Mentors should answer questions the intern asks.</p>
+		<p>Mentors should answer questions sent via email or private message. Mentors should encourage interns to ask questions on the public community chat, forum, or mailing lists. However, they should not refuse to answer questions sent privately.</p>
+	</li>
+	<li>
+		<p><b>Tracking progress.</b></p>
+		<p><i>Weekly meeting:</i> Mentors should schedule a weekly phone or video chat with their intern.</p>
+		<p><i>Daily stand-up:</i> Outreachy organizers highly encourage mentors to set up a daily stand-up, either via phone or real-time chat. A daily stand-up allows you to track the intern's progress and ask if they are facing any blockers.</p>
+		<p><i>Intern blog:</i> Mentors should be aware of where their intern blog is located. Interns are required to blog every two weeks. Mentors should read, comment, and share those blog posts with the wider community or on social media.</p>
+	</li>
+	<li>
+		<p><b>Giving acknowledgment and praise.</b></p>
+		<p><i>Acknowledgment of effort:</i> Mentors should acknowledge the effort and hard work the intern put in during the contribution period.</p>
+		<p><i>Positive feedback:</i> Mentors should give positive feedback about the intern's efforts to ramp up on their project.</p>
+	</li>
+	<li>
+		<p><b>Giving feedback.</b></p>
+		<p><i>Communication skills:</i> If necessary, mentors should give the intern feedback on how they can communicate more clearly.</p>
+		<p><i>Team work skills:</i> Interns are likely to be new to working publicly in an open source community. Mentors should give the intern feedback on how to effectively ask questions in the community's chat, forum, or mailing lists. Mentors should coach the intern how the community collaborates and works together as a team. Mentors should explain the roles of different team members.</p>
+		<p><i>Contribution skills:</i> Mentors may need to coach interns on how to create drafts of their work and share them with the community. This will help the intern gather feedback on their approach or design before putting too much time into the implementation.</p>
+		<p><i>Critical thinking skills:</i> While the intern is ramping up on their project, mentors may have to provide more coaching to the intern to help them solve problems. Mentors should provide links to resources, as well as pointing out which section of the resources to read. Mentors should encourage the intern to create a list of resources, and consult those resources when they run into issues.</p>
+	</li>
+	<li>
+		<p><b>Creating networking opportunities.</b></p>
+		<p><i>Community networking:</i> Mentors should announce the internship to their open source community. If their open source community is very small (e.g. 3-5 people), Outreachy organizers encourage mentors to announce the internship to related open source communities or related STEM communities. Congratulate the intern on their internship, and explain what project the intern will be working. If the internship project scope has changed, discuss the changed scope with your intern before announcing the project change to the community.</p>
+		<p><i>Technical industry networking:</i> Ask your intern whether they would like to be tagged on any social media posts. Some interns prefer to not have their social media usernames mentioned in mentor posts. Once you have obtained consent, mentors are encouraged to announce the intern and their project on social media.</p>
+	</li>
+	<li>
+		<p><b>Encouraging career development.</b></p>
+		<p><i>Intern career goals:</i> Mentors should discuss what type of work the intern has enjoyed in the past, and what type of work or challenges they would like to tackle during the internship. Mentors should ask what skills the intern would like to learn during the internship. Mentors should discuss with their intern what their career goals are. If the intern does not know what career they want to pursue, the mentor can discuss the different career options they know of.</p>
+		<p><i>Project modification:</i> If possible, mentors may want to modify the project goals to better align with skills the intern wants to learn, the type of work they want to do, what challenges they want to tackle, and their career goals.</p>
+	</li>
+</ol>
+</p>
 
 <p><a href='#toc'><u>↑ table of contents</u></a></p>
 <hr>
