Integrate more mentor expectations from week 1 email into community guide

--- a/home/templates/home/docs/community_guide.html
+++ b/home/templates/home/docs/community_guide.html
@@ -526,8 +526,8 @@ Some times project mentors <a href="#contribution-evaluation">evaluated the cont
 <ol>
 	<li>
 		<p><b>Clearing up doubts.</b></p>
-		<p>Mentors should answer questions the intern asks.</p>
-		<p>Mentors should answer questions sent via email or private message. Mentors should encourage interns to ask questions on the public community chat, forum, or mailing lists. However, they should not refuse to answer questions sent privately.</p>
+		<p><i>Answer intern questions:</i> Mentors should answer questions sent via email or private message. Mentors should encourage interns to ask questions on the public community chat, forum, or mailing lists. However, they should not refuse to answer questions sent privately.</p>
+		<p><i>Office hours:</i> Mentors should set up a time each day when they can answer intern questions via chat. Ideally there will be at least 1 hour overlap between mentor working hours and intern working hours.</p>
 	</li>
 	<li>
 		<p><b>Tracking progress.</b></p>
@@ -543,18 +543,25 @@ Some times project mentors <a href="#contribution-evaluation">evaluated the cont
 	<li>
 		<p><b>Giving feedback.</b></p>
 		<p><i>Communication skills:</i> If necessary, mentors should give the intern feedback on how they can communicate more clearly.</p>
-		<p><i>Team work skills:</i> Interns are likely to be new to working publicly in an open source community. Mentors should give the intern feedback on how to effectively ask questions in the community's chat, forum, or mailing lists. Mentors should coach the intern how the community collaborates and works together as a team. Mentors should explain the roles of different team members.</p>
+		<p><i>Team work skills:</i> Interns are likely to be new to working publicly in an open source community. Mentors should give the intern feedback on how to effectively ask questions in the community's chat, forum, or mailing lists. Mentors should coach the intern how the community collaborates and works together as a team. Mentors should explain how to submit contributions and any contribution style requirements.</p>
 		<p><i>Contribution skills:</i> Mentors may need to coach interns on how to create drafts of their work and share them with the community. This will help the intern gather feedback on their approach or design before putting too much time into the implementation.</p>
 		<p><i>Critical thinking skills:</i> While the intern is ramping up on their project, mentors may have to provide more coaching to the intern to help them solve problems. Mentors should provide links to resources, as well as pointing out which section of the resources to read. Mentors should encourage the intern to create a list of resources, and consult those resources when they run into issues.</p>
 	</li>
 	<li>
+		<p><b>Teaching about open source.</b></p>
+		<p><i>Onboarding documents:</i> Mentors should coach the intern on how to interact with the community, which chat channels to use, where to ask for help. Ideally these community norms would be documented. Mentors may need to create the documentation if it doesn't exist, or work with their intern to create documentation.</p>
+		<p><i>Community vocabulary:</i> Mentors should watch for community-specific terms, acronyms, or jargon. Mentors should explain those community-specific terms to their interns.</p>
+	</li>
+	<li>
 		<p><b>Creating networking opportunities.</b></p>
+		<p><i>Community roles:</i> Mentors should go over the community members or teams. Explain the different roles and which community members work on what part of the project. If your community is large, explain your immediate team or subsystem now. Then explain the larger community structure later in the internship.</p>
 		<p><i>Community networking:</i> Mentors should announce the internship to their open source community. If their open source community is very small (e.g. 3-5 people), Outreachy organizers encourage mentors to announce the internship to related open source communities or related STEM communities. Congratulate the intern on their internship, and explain what project the intern will be working. If the internship project scope has changed, discuss the changed scope with your intern before announcing the project change to the community.</p>
 		<p><i>Technical industry networking:</i> Ask your intern whether they would like to be tagged on any social media posts. Some interns prefer to not have their social media usernames mentioned in mentor posts. Once you have obtained consent, mentors are encouraged to announce the intern and their project on social media.</p>
 	</li>
 	<li>
 		<p><b>Encouraging career development.</b></p>
-		<p><i>Intern career goals:</i> Mentors should discuss what type of work the intern has enjoyed in the past, and what type of work or challenges they would like to tackle during the internship. Mentors should ask what skills the intern would like to learn during the internship. Mentors should discuss with their intern what their career goals are. If the intern does not know what career they want to pursue, the mentor can discuss the different career options they know of.</p>
+		<p><i>Intern skills goals:</i> Mentors should discuss what type of work the intern has enjoyed in the past, and what type of work or challenges they would like to tackle during the internship. Mentors should ask what skills the intern would like to learn during the internship.</p>
+		<p><i>Intern career goals:</i> Mentors should discuss with their intern what their career goals are. If the intern does not know what career they want to pursue, the mentor can discuss the different career options they know of.</p>
 		<p><i>Project modification:</i> If possible, mentors may want to modify the project goals to better align with skills the intern wants to learn, the type of work they want to do, what challenges they want to tackle, and their career goals.</p>
 	</li>
 </ol>
