--- a/home/templates/home/dashboard/email/internship-week-1.html
+++ b/home/templates/home/dashboard/email/internship-week-1.html
@@ -1,4 +1,4 @@
-<p>Week 1: Send a welcome email with information about the week 2 chat and a blog post prompt. Make sure the <a href="{{ current_round.week_two_chat_text_url }}">Outreachy week 2 text chat URL</a> works:
+<p>Week 1: Send a welcome email with the week 1 intro chat link and a blog post prompt. Make sure the <a href="{{ current_round.week_two_chat_text_url }}">Outreachy week 1 intro chat URL</a> works:
 <ul>
 	<li>Send the email on {{ due }}.</li>
 </ul>
